--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
 
   vote-service:
     build: ./services/vote-service
+    container_name: vote-service
     ports: 
       - 3003:3003
     networks:
@@ -52,6 +53,7 @@ services:
   
   mysql:
     image: mysql:latest
+    container_name: mysql-service
     restart: always
     environment:
        MYSQL_ALLOW_EMPTY_PASSWORD: yes
