--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     restart: always
     environment:
        MYSQL_ALLOW_EMPTY_PASSWORD: yes
-       MYSQL_DATABASE: ${MYSQL_DATABASE}
+       MYSQL_DATABASE: dev_cda
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
