--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,11 +22,12 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          echo "Waiting for MySQL to be ready..."
-          until docker exec $(docker ps -qf "name=mysql-service") mysqladmin ping -h 127.0.0.1 --silent; do
-            sleep 5
-          done
-          echo "MySQL is ready!"
+           echo "Waiting for MySQL to be ready..."
+           until sudo docker exec mysql-service mysqladmin ping -h 127.0.0.1 -u root | grep "mysqld is alive"; do
+           sleep 5
+           done
+           echo "MySQL is ready!"
+
 
       - name: Run tests for Auth service
         uses: adambirds/docker-compose-action@v1.5.0
