--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,23 @@ networks:
     driver: bridge
 
 services:
+  frontend:
+     build: ./frontend
+     container_name : frontend-service
+     restart : always
+     ports:
+       - 4000:4000
+     networks:
+       - cda-networks
+     volumes:
+       - ./frontend:/app
+       - /app/node_modules
+     healthcheck: 
+      test: ["CMD", "curl", "-f", "http://localhost:4000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+          
   auth-service:
     build: ./services/auth-service
     container_name: auth-service
