--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ networks:
     driver: bridge
 
 services:
-  frontend:
+  frontend-service:
      build: ./frontend
      container_name : frontend-service
      restart : always
@@ -15,7 +15,7 @@ services:
        - ./frontend:/app
        - /app/node_modules
      healthcheck: 
-      test: ["CMD", "curl", "-f", "http://localhost:4000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:4000/", "|", "grep", "'<title>Vite + React + TS</title>"]
       interval: 30s
       timeout: 10s
       retries: 3
