--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
        - ./frontend:/app
        - /app/node_modules
      healthcheck: 
-      test: ["CMD", "curl", "-f", "http://localhost:4000/", "|", "grep", "'<title>Vite + React + TS</title>"]
+      test: ["CMD", "curl", "-f", "http://localhost:4000/", "|", "grep", "<title>Vite + React + TS</title>"]
       interval: 30s
       timeout: 10s
       retries: 3
