--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,29 @@ networks:
     driver: bridge
 
 services:
-  frontend-service:
-     build: ./frontend
-     container_name : frontend-service
-     restart : always
-     ports:
-       - 4000:4000
-     networks:
-       - cda-networks
-     depends_on:
-       auth-service:
-         condition: service_healthy
-       chat-service:
-         condition: service_healthy
-       vote-service:
-         condition: service_healthy
-     volumes:
-       - ./frontend:/app
-       - /app/node_modules
-     healthcheck: 
-      test: ["CMD-SHELL", "curl -f http://localhost:4000/ | grep '<title>Vite + React + TS</title>' || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+  # frontend-service:
+  #    build: ./frontend
+  #    container_name : frontend-service
+  #    restart : always
+  #    ports:
+  #      - 4000:4000
+  #    networks:
+  #      - cda-networks
+  #    depends_on:
+  #      auth-service:
+  #        condition: service_healthy
+  #      chat-service:
+  #        condition: service_healthy
+  #      vote-service:
+  #        condition: service_healthy
+  #    volumes:
+  #      - ./frontend:/app
+  #      - /app/node_modules
+  #    healthcheck: 
+  #     test: ["CMD-SHELL", "curl -f http://localhost:4000/ | grep '<title>Vite + React + TS</title>' || exit 1"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
           
   auth-service:
     build: ./services/auth-service
