--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,11 @@ services:
      volumes:
        - ./frontend:/app
        - /app/node_modules
-    #  healthcheck: 
-    #   test: ["CMD-SHELL", "curl -f http://localhost:4000/ | grep '<title>Vite + React + TS</title>' || exit 1"]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 3
+     healthcheck: 
+      test: ["CMD-SHELL", "curl -f http://localhost:4000/ | grep '<title>Vite + React + TS</title>' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
           
   auth-service:
     build: ./services/auth-service
