--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,20 +49,12 @@ jobs:
           compose-file: "docker-compose.yml"
           test-container: "vote-service"
           test-command: "npm test"
-
-      - name: Check running containers
-        run: docker ps -a
-        
-      # - name: Wait for Backend to be ready
-      #   run: |
-      #     echo "Waiting for Backend to be ready..."
-      #     until docker exec auth-service curl -f http://localhost:3000/ && \
-      #     docker exec chat-service curl -f http://localhost:3001/ && \
-      #     docker exec vote-service curl -f http://localhost:3003/; do
-      #     echo "Still waiting for backend services..."
-      #     sleep 5
-      #     done
-      #     echo "Backend is ready!"
+      - name : Docker logs Auth
+        run : docker logs auth-service
+      - name : Docker logs Vote
+        run : docker logs vote-service
+      - name : Docker logs Chat
+        run : docker logs chat-service
 
       # - name: Run tests for Frontend service
       #   uses: adambirds/docker-compose-action@v1.5.0
