--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,19 +49,13 @@ jobs:
           compose-file: "docker-compose.yml"
           test-container: "vote-service"
           test-command: "npm test"
-      - name : Docker logs Auth
-        run : docker logs auth-service
-      - name : Docker logs Vote
-        run : docker logs vote-service
-      - name : Docker logs Chat
-        run : docker logs chat-service
 
-      # - name: Run tests for Frontend service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "frontend-service"
-      #     test-command: "npm test"
+      - name: Run tests for Frontend service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "frontend-service"
+          test-command: "npm test"
 
       - name: Stop services
         run: docker compose down
