--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
        - ./frontend:/app
        - /app/node_modules
      healthcheck: 
-      test: ["CMD-SHELL", "curl -f http://localhost:4000/ | grep '<title>Vite + React + TS</title>' || exit 1"]
+      test: ["CMD", "curl -f http://localhost:4000/"]
       interval: 30s
       timeout: 10s
       retries: 3
