--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,13 +49,14 @@ jobs:
           compose-file: "docker-compose.yml"
           test-container: "vote-service"
           test-command: "npm test"
-
-      - name: Run tests for Frontend service
-        uses: adambirds/docker-compose-action@v1.5.0
-        with:
-          compose-file: "docker-compose.yml"
-          test-container: "frontend-service"
-          test-command: "npm test"
+      - name : Docker test
+      uses: docker ps -a
+      # - name: Run tests for Frontend service
+      #   uses: adambirds/docker-compose-action@v1.5.0
+      #   with:
+      #     compose-file: "docker-compose.yml"
+      #     test-container: "frontend-service"
+      #     test-command: "npm test"
 
       - name: Stop services
         run: docker compose down
