--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,8 +49,10 @@ jobs:
           compose-file: "docker-compose.yml"
           test-container: "vote-service"
           test-command: "npm test"
+
       - name : Docker test
-        uses: docker ps -a
+        run: docker ps -a
+
       # - name: Run tests for Frontend service
       #   uses: adambirds/docker-compose-action@v1.5.0
       #   with:
