--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,29 +28,29 @@ jobs:
            done
            echo "MySQL is ready!"
 
-      - name: Wait for auth-service to be ready
-        run: |
-             echo "Waiting for auth-service to be ready..."
-             until curl -s -o /dev/null -w "%{http_code}" http://localhost:3000/ | grep "200"; do
-               sleep 5
-             done
-             echo "auth-service is ready!"
+      # - name: Wait for auth-service to be ready
+      #   run: |
+      #        echo "Waiting for auth-service to be ready..."
+      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3000/ | grep "200"; do
+      #          sleep 5
+      #        done
+      #        echo "auth-service is ready!"
    
-      - name: Wait for chat-service to be ready
-        run: |
-             echo "Waiting for chat-service to be ready..."
-             until curl -s -o /dev/null -w "%{http_code}" http://localhost:3001/ | grep "200"; do
-               sleep 5
-             done
-             echo "chat-service is ready!"
+      # - name: Wait for chat-service to be ready
+      #   run: |
+      #        echo "Waiting for chat-service to be ready..."
+      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3001/ | grep "200"; do
+      #          sleep 5
+      #        done
+      #        echo "chat-service is ready!"
    
-      - name: Wait for vote-service to be ready
-        run: |
-             echo "Waiting for vote-service to be ready..."
-             until curl -s -o /dev/null -w "%{http_code}" http://localhost:3003/ | grep "200"; do
-               sleep 5
-             done
-             echo "vote-service is ready!"
+      # - name: Wait for vote-service to be ready
+      #   run: |
+      #        echo "Waiting for vote-service to be ready..."
+      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3003/ | grep "200"; do
+      #          sleep 5
+      #        done
+      #        echo "vote-service is ready!"
              
 
       - name: Run tests for Auth service
@@ -77,12 +77,18 @@ jobs:
       - name : Docker test
         run: docker ps -a
 
-      # - name: Run tests for Frontend service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "frontend-service"
-      #     test-command: "npm test"
+
+      - name: Afficher les logs de docker-compose
+        run: docker-compose logs auth-service
+      
+      
+
+      - name: Run tests for Frontend service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "frontend-service"
+          test-command: "npm test"
 
       - name: Stop services
         run: docker compose down
