--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Start all services
-        run: docker-compose up -d
+        run: docker compose up -d
       
      
       - name: Vérifier l'état des conteneurs
