--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,21 +11,16 @@ services:
        - 4000:4000
      networks:
        - cda-networks
-     depends_on:
-       auth-service:
-         condition: service_healthy
-       vote-service:
-          condition : service_healthy
-       chat-service:
-          condition : service_healthy
      volumes:
        - ./frontend:/app
        - /app/node_modules
-     healthcheck: 
-      test: ["CMD", "curl -f http://localhost:4000/"]
-      interval: 30s
-      timeout: 10s
+     healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/ || exit 1"]
+      interval: 40s
+      timeout: 30s
       retries: 3
+      start_period: 60s
+  
           
   auth-service:
     build: ./services/auth-service
@@ -35,11 +30,13 @@ services:
     networks:
       - cda-networks
     restart: always
-    healthcheck: 
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
-      interval: 30s
-      timeout: 10s
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/ || exit 1"]
+      interval: 40s
+      timeout: 30s
       retries: 3
+      start_period: 60s
+  
 
   chat-service:
     build: ./services/chat-service
@@ -53,10 +50,12 @@ services:
          condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://chat-service:3001/"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "curl", "-f", "http://localhost:3001/ || exit 1"]
+      interval: 40s
+      timeout: 30s
       retries: 3
+      start_period: 60s
+  
 
   vote-service:
     build: ./services/vote-service
@@ -70,10 +69,11 @@ services:
          condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://vote-service:3003/"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "curl", "-f", "http://localhost:3003/ || exit 1"]
+      interval: 40s
+      timeout: 30s
       retries: 3
+      start_period: 60s
   
   mysql:
     image: mysql:latest
