--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,14 +19,14 @@ jobs:
 
 
       - name: Afficher les logs auth
-        run: docker-compose logs auth-service
+        run: docker compose logs auth-service
 
         
       - name: Afficher les logs de vote
-        run: docker-compose logs vote-service
+        run: docker compose logs vote-service
         
       - name: Afficher les logs de chat 
-        run: docker-compose logs chat-service
+        run: docker compose logs chat-service
       
      
       - name: Vérifier l'état des conteneurs
