--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Start all services
         run: docker compose up -d
 
-
       - name: Afficher les logs auth
         run: docker compose logs auth-service
 
@@ -31,9 +30,6 @@ jobs:
      
       - name: Vérifier l'état des conteneurs
         run: docker ps -a
-
-      
-
 
       # - name: Wait for MySQL to be ready
       #   run: |
@@ -68,42 +64,33 @@ jobs:
       #        echo "vote-service is ready!"
              
 
-      # - name: Run tests for Auth service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "auth-service"
-      #     test-command: "npm test"
+      - name: Run tests for Auth service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "auth-service"
+          test-command: "npm test"
 
-      # - name: Run tests for Chat service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "chat-service"
-      #     test-command: "npm test"
+      - name: Run tests for Chat service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "chat-service"
+          test-command: "npm test"
 
-      # - name: Run tests for Vote service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "vote-service"
-      #     test-command: "npm test"
-
-      # - name : Docker test
-      #   run: docker ps -a
-
-
-      # - name: Afficher les logs de docker-compose
-      #   run: docker-compose logs auth-service
+      - name: Run tests for Vote service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "vote-service"
+          test-command: "npm test"
       
-      
-
-      # - name: Run tests for Frontend service
-      #   uses: adambirds/docker-compose-action@v1.5.0
-      #   with:
-      #     compose-file: "docker-compose.yml"
-      #     test-container: "frontend-service"
-      #     test-command: "npm test"
+      - name: Run tests for Frontend service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+          compose-file: "docker-compose.yml"
+          test-container: "frontend-service"
+          test-command: "npm test"
 
       - name: Stop services
         run: docker compose down
