--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     environment:
       DB_PORT: ${DB_PORT}
       DB_TYPE: ${DB_TYPE}
-      DB_HOST: ${DB_TYPE}
+      DB_HOST: ${DB_HOST}
       DB_DATABASE: ${DB_DATABASE}
       DB_USER: ${DB_USER}
     ports: 
