initisalisation du projet

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Vérifier l’installation de vitest
         run: |
           cd frontend
+          npm install
           npx vitest --version
 
 
