initialisation du projet

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,39 +45,6 @@ jobs:
           cd frontend
           npm install      
 
-      # - name: Wait for MySQL to be ready
-      #   run: |
-      #      echo "Waiting for MySQL to be ready..."
-      #      until sudo docker exec mysql-service mysqladmin ping -h 127.0.0.1 -u root | grep "mysqld is alive"; do
-      #      sleep 5
-      #      done
-      #      echo "MySQL is ready!"
-
-      # - name: Wait for auth-service to be ready
-      #   run: |
-      #        echo "Waiting for auth-service to be ready..."
-      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3000/ | grep "200"; do
-      #          sleep 5
-      #        done
-      #        echo "auth-service is ready!"
-   
-      # - name: Wait for chat-service to be ready
-      #   run: |
-      #        echo "Waiting for chat-service to be ready..."
-      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3001/ | grep "200"; do
-      #          sleep 5
-      #        done
-      #        echo "chat-service is ready!"
-   
-      # - name: Wait for vote-service to be ready
-      #   run: |
-      #        echo "Waiting for vote-service to be ready..."
-      #        until curl -s -o /dev/null -w "%{http_code}" http://localhost:3003/ | grep "200"; do
-      #          sleep 5
-      #        done
-      #        echo "vote-service is ready!"
-             
-
       - name: Run tests for Auth service
         uses: adambirds/docker-compose-action@v1.5.0
         with:
@@ -106,5 +73,9 @@ jobs:
           test-container: "frontend-service"
           test-command: "npm test"
 
+
+      - name: Check services
+        run: docker ps
+        
       - name: Stop services
         run: docker compose down
