--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
       
       - name: Créer le fichier .env
         run: |
-          echo "VITE_VOTE_SERVICE_URL=${{ secrets.VITE_VOTE_SERVICE_URL }}" >> .env
-          echo "VITE_AUTH_SERVICE_URL=${{ secrets.VITE_AUTH_SERVICE_URL }}" >> .env
+          echo "VITE_VOTE_SERVICE_URL=${{ secrets.VITE_PROJECT_SERVICE_URL }}" >> .env
+          echo "VITE_AUTH_SERVICE_URL=${{ secrets.VITE_PROJECT_SERVICE_URL }}" >> .env
           echo "VITE_CHAT_SERVICE_URL=${{ secrets.VITE_CHAT_SERVICE_URL }}" >> .env
           echo "DB_TYPE=${{ secrets.DB_TYPE }}" >> .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
@@ -59,11 +59,11 @@ jobs:
           test-container: "chat-service"
           test-command: "npm test"
 
-      - name: Run tests for Vote service
+      - name: Run tests for Project service
         uses: adambirds/docker-compose-action@v1.5.0
         with:
           compose-file: "docker-compose.yml"
-          test-container: "vote-service"
+          test-container: "project-service"
           test-command: "npm test"
       
       - name: Run tests for Frontend service
