--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,29 @@ services:
       retries: 3
       start_period: 60s
   
+  project-service:
+    build: ./services/project-service
+    container_name: project-service
+    environment:
+      DB_PORT: ${DB_PORT}
+      DB_TYPE: ${DB_TYPE}
+      DB_HOST: ${DB_HOST}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+    ports: 
+      - 3002:3002
+    networks:
+      - cda-networks
+    depends_on:
+       mysql:
+         condition: service_healthy
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3002/ || exit 1"]
+      interval: 40s
+      timeout: 30s
+      retries: 3
+      start_period: 60s
 
   chat-service:
     build: ./services/chat-service
@@ -62,31 +85,6 @@ services:
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/ || exit 1"]
-      interval: 40s
-      timeout: 30s
-      retries: 3
-      start_period: 60s
-  
-
-  vote-service:
-    build: ./services/vote-service
-    container_name: vote-service
-    environment:
-      DB_PORT: ${DB_PORT}
-      DB_TYPE: ${DB_TYPE}
-      DB_HOST: ${DB_HOST}
-      DB_DATABASE: ${DB_DATABASE}
-      DB_USER: ${DB_USER}
-    ports: 
-      - 3003:3003
-    networks:
-      - cda-networks
-    depends_on:
-       mysql:
-         condition: service_healthy
-    restart: always
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3003/ || exit 1"]
       interval: 40s
       timeout: 30s
       retries: 3
