mise à jour du docker compose et de la pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,8 @@ jobs:
           echo "DB_TYPE=${{ secrets.DB_TYPE }}" >> .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE_CHAT }}" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE_PROJECT }}" >> .env
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
 
