--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,21 +51,21 @@ jobs:
         with:
           compose-file: "docker-compose.yml"
           test-container: "auth-service"
-          test-command: "npm test"
+          test-command: "npm run test:e2e"
 
       - name: Run tests for Chat service
         uses: adambirds/docker-compose-action@v1.5.0
         with:
           compose-file: "docker-compose.yml"
           test-container: "chat-service"
-          test-command: "npm test"
+          test-command: "npm run test:e2e"
 
       - name: Run tests for Project service
         uses: adambirds/docker-compose-action@v1.5.0
         with:
           compose-file: "docker-compose.yml"
           test-container: "project-service"
-          test-command: "npm test"
+          test-command: "npm run test:e2e"
       
       - name: Run tests for Frontend service
         uses: adambirds/docker-compose-action@v1.5.0
