--- a/services/chat-service/package.json
+++ b/services/chat-service/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.11",
     "axios": "^1.8.2",
+    "bson": "^6.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mysql2": "^3.12.0",
