--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,18 +16,18 @@ jobs:
       
       - name: Créer le fichier .env
         run: |
-          echo "VITE_VOTE_SERVICE_URL=${{ secrets.VITE_PROJECT_SERVICE_URL }}" >> .env
+          echo "VITE_PROJECT_SERVICE_URL=${{ secrets.VITE_PROJECT_SERVICE_URL }}" >> .env
           echo "VITE_AUTH_SERVICE_URL=${{ secrets.VITE_AUTH_SERVICE_URL }}" >> .env
           echo "VITE_CHAT_SERVICE_URL=${{ secrets.VITE_CHAT_SERVICE_URL }}" >> .env
           echo "DB_TYPE=${{ secrets.DB_TYPE }}" >> .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE_CHAT }}" >> .env
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE_PROJECT }}" >> .env
+          echo "DB_DATABASE_CHAT=${{ secrets.DB_DATABASE_CHAT }}" >> .env
+          echo "DB_DATABASE_PROJECT=${{ secrets.DB_DATABASE_PROJECT }}" >> .env
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "DB_USER=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
-          echo "DB_USER=${{ secrets.JWT_SECRET }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
       - name: Start all services
         run: docker compose up -d
