--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,8 @@ services:
     container_name: mysql-service
     restart: always
     environment:
-       MYSQL_ALLOW_EMPTY_PASSWORD: yes
+       DB_USER: ${DB_USER}
+       DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
