--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,8 +102,10 @@ services:
     restart: always
     environment:
        MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-       MYSQL_USER: ${MYSQL_USER}
-       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+       DB_USER: ${DB_USER}
+       DB_PASSWORD : ${DB_PASSWORD}
+       DB_DATABASE_CHAT : ${DB_DATABASE_CHAT}
+       DB_DATABASE_PROJECT : ${DB_DATABASE_PROJECT}
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
