--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,10 +102,9 @@ services:
     restart: always
     environment:
        MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-       DB_USER: ${DB_USER}
-       DB_PASSWORD : ${DB_PASSWORD}
-       DB_DATABASE_CHAT : ${DB_DATABASE_CHAT}
-       DB_DATABASE_PROJECT : ${DB_DATABASE_PROJECT}
+       MYSQL_USER: ${DB_USER}
+       MYSQL_PASSWORD : ${DB_PASSWORD}
+       MYSQL_DATABASE : ${DB_DATABASE_CHAT}
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
