--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,12 +102,15 @@ services:
     restart: always
     environment:
        MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-       MYSQL_USER: ${DB_USER}
-       MYSQL_PASSWORD : ${DB_PASSWORD}
-       MYSQL_DATABASE : ${DB_DATABASE_CHAT}
+       DB_DATABASE_PROJECT: ${DB_DATABASE_PROJECT}
+       DB_DATABASE_CHAT: ${DB_DATABASE_CHAT}
+       MYSQL_USER: ${MYSQL_USER}
+       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./scripts/generate-init.sh:/app/generate-init.sh
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: ["/bin/sh", "-c", "chmod +x /app/generate-init.sh && /app/generate-init.sh"]
     ports:
       - "3306:3306"
     networks:
