--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,8 @@ services:
     networks:
       - cda-networks
     depends_on:
-      - auth-service: 
-         condition: service_healthy
-      - mysql:
-         condition: service_healthy
+      - auth-service
+      - mysql
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3002/ || exit 1"]
@@ -88,12 +86,9 @@ services:
     networks:
       - cda-networks
     depends_on:
-       - auth-service:
-         condition: service_healthy
-       - project-service:
-          condition: service_healthy
-       - mysql:
-         condition: service_healthy
+       - auth-service
+       - project-service
+       - mysql
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/ || exit 1"]
