--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
      container_name : frontend-service
      restart : always
      ports:
-       - 4000:4000
+       - "4000:4000"
      networks:
        - cda-networks
      volumes:
@@ -18,10 +18,10 @@ services:
           VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
           VITE_CHAT_SERVICE_URL: ${VITE_CHAT_SERVICE_URL}
      healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/ || exit 1"]
-      interval: 40s
-      timeout: 30s
-      retries: 3
+      test: ["CMD", "curl", "-f", "http://localhost:4000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
       start_period: 60s
   
           
@@ -31,15 +31,15 @@ services:
     environment:
       MONGODB_URI : ${MONGODB_URI}
     ports: 
-      - 3000:3000
+      - "3000:3000"
     networks:
       - cda-networks
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/ || exit 1"]
-      interval: 40s
-      timeout: 30s
-      retries: 3
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
       start_period: 60s
   
   project-service:
@@ -55,7 +55,7 @@ services:
       MONGODB_URI : ${MONGODB_URI}
       JWT_SECRET: ${JWT_SECRET}
     ports: 
-      - 3002:3002
+      - "3002:3002"
     networks:
       - cda-networks
     depends_on:
@@ -63,10 +63,10 @@ services:
          condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3002/ || exit 1"]
-      interval: 40s
-      timeout: 30s
-      retries: 3
+      test: ["CMD", "curl", "-f", "http://localhost:3002/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
       start_period: 60s
 
   chat-service:
@@ -82,7 +82,7 @@ services:
       MONGODB_URI : ${MONGODB_URI}
       JWT_SECRET: ${JWT_SECRET}
     ports: 
-      - 3001:3001
+      - "3001:3001"
     networks:
       - cda-networks
     depends_on:
@@ -90,10 +90,10 @@ services:
          condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/ || exit 1"]
-      interval: 40s
-      timeout: 30s
-      retries: 3
+      test: ["CMD", "curl", "-f", "http://localhost:3001/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
       start_period: 60s
   
   mysql:
