--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,6 +67,13 @@ jobs:
           compose-file: "docker-compose.yml"
           test-container: "chat-service"
           test-command: "npm run test:e2e"
+
+      - name: Run tests for project_user_post service
+        uses: adambirds/docker-compose-action@v1.5.0
+        with:
+            compose-file: "docker-compose.yml"
+            test-container: "project_user_post-service"
+            test-command: "npm run test:e2e"
       
       - name: Run tests for Frontend service
         uses: adambirds/docker-compose-action@v1.5.0
