mise à jour du docker de project_user_post-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
       DB_PORT: ${DB_PORT}
       DB_TYPE: ${DB_TYPE}
       DB_HOST: ${DB_HOST}
-      MYSQL_DATABASE : ${DB_DATABASE_RELATION}
+      DB_DATABASE_RELATION: ${DB_DATABASE_RELATION}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MONGODB_URI : ${MONGODB_URI}
