--- a/services/chat-service/package.json
+++ b/services/chat-service/package.json
@@ -28,8 +28,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.0.11",
+    "@nestjs/websockets": "^11.0.12",
     "axios": "^1.8.2",
     "bson": "^6.10.3",
     "class-transformer": "^0.5.1",
@@ -37,6 +38,7 @@
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
