--- a/services/project-user-post-service/package.json
+++ b/services/project-user-post-service/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.13",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.13",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
