mise à jour du css du projet

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,7 @@ jobs:
           echo "AUTH_DOCKER_URL=${{ secrets.AUTH_DOCKER_URL }}" >> .env
           echo "PROJECT_DOCKER_URL=${{ secrets.PROJECT_DOCKER_URL }}" >> .env
           echo "CHAT_DOCKER_URL=${{ secrets.CHAT_DOCKER_URL }}" >> .env
+          echo "REACT_APP_PROJECT_USER_POST_URL=${{ secrets.REACT_APP_PROJECT_USER_POST_URL }}" >> .env
 
       - name: Start all services
         run: docker compose up -d
