--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
           VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
           VITE_CHAT_SERVICE_URL: ${VITE_CHAT_SERVICE_URL}
           VITE_PROJECT_USER_POST_SERVICE_URL: ${VITE_PROJECT_USER_POST_SERVICE_URL}
-          REACT_APP_PROJECT_USER_POST_URL : ${REACT_APP_PROJECT_USER_POST_URL}
+          PROJECT_USER_POST_DOCKER_URL : ${PROJECT_USER_POST_DOCKER_URL}
+          CHAT_DOCKER_URL: ${CHAT_DOCKER_URL}
      healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4000/"]
       interval: 30s
