--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -26,7 +26,8 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.13",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
     "bson": "^6.10.3",
@@ -34,9 +35,11 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serve-static": "^2.2.0",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
@@ -52,6 +55,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
