--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -156,13 +156,10 @@ services:
     container_name: mysql-service
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ADMIN_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/script.sh:/docker-entrypoint-initdb.d/script.sh
     ports:
       - "3306:3306"
     networks:
