--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
           VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
           VITE_CHAT_SERVICE_URL: ${VITE_CHAT_SERVICE_URL}
           VITE_PROJECT_USER_POST_SERVICE_URL: ${VITE_PROJECT_USER_POST_SERVICE_URL}
-          PROJECT_USER_POST_DOCKER_URL : ${PROJECT_USER_POST_DOCKER_URL}
-          CHAT_DOCKER_URL: ${CHAT_DOCKER_URL}
      healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4000/"]
       interval: 30s
@@ -57,7 +55,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MONGODB_URI : ${MONGODB_URI}
       JWT_SECRET: ${JWT_SECRET}
-      AUTH_DOCKER_URL : ${AUTH_DOCKER_URL}
+      VITE_AUTH_SERVICE_URL : ${VITE_AUTH_SERVICE_URL}
     ports: 
       - "3002:3002"
     networks:
@@ -85,8 +83,8 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MONGODB_URI : ${MONGODB_URI}
       JWT_SECRET: ${JWT_SECRET}
-      AUTH_DOCKER_URL: ${AUTH_DOCKER_URL}
-      PROJECT_DOCKER_URL : ${PROJECT_DOCKER_URL}
+      VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
+      VITE_PROJECT_SERVICE_URL : ${VITE_PROJECT_SERVICE_URL}
     ports: 
       - "3001:3001"
     networks:
@@ -116,8 +114,9 @@ services:
       MONGODB_URI : ${MONGODB_URI}
       JWT_SECRET: ${JWT_SECRET}
       CHAT_DOCKER_URL: ${CHAT_DOCKER_URL}
-      AUTH_DOCKER_URL : ${AUTH_DOCKER_URL}
-      PROJECT_DOCKER_URL : ${PROJECT_DOCKER_URL}
+      VITE_AUTH_SERVICE_URL : ${VITE_AUTH_SERVICE_URL}
+      VITE_PROJECT_SERVICE_URL : ${VITE_PROJECT_SERVICE_URL}
+      VITE_CHAT_SERVICE_URL: ${VITE_CHAT_SERVICE_URL}
     ports: 
       - "3003:3003"
     networks:
@@ -138,10 +137,10 @@ services:
     container_name: mysql-service
     restart: always
     environment:
-       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ADMIN_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/script.sh:/docker-entrypoint-initdb.d/init.sh
     ports:
       - "3306:3306"
     networks:
