--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,7 @@ services:
     container_name: mysql-service
     restart: always
     environment:
-       MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ADMIN_PASSWORD}"
+       MYSQL_ROOT_PASSWORD: "${MYSQL_ADMIN_PASSWORD}"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/script.sh:/docker-entrypoint-initdb.d/script.sh
