--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,10 @@ services:
     container_name: mysql-service
     restart: always
     environment:
-       MYSQL_ROOT_PASSWORD: "${MYSQL_ADMIN_PASSWORD}"
+       MYSQL_ROOT_PASSWORD: ${MYSQL_ADMIN_PASSWORD}
+       MYSQL_USER: ${MYSQL_USER}
+       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+       MYSQL_MULTIPLE_DATABASES: "${DB_DATABASE_CHAT},${DB_DATABASE_PROJECT},${DB_DATABASE_RELATION}"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db/script.sh:/docker-entrypoint-initdb.d/script.sh
