creation d'instances aws avec terraform

--- a/.gitignore
+++ b/.gitignore
@@ -130,4 +130,7 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-db/init.sql
+.terraform.lock.hcl
+.terraform
+terraform.tfstate.backup
+terraform.tfstate
