--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     container_name: auth-service
     environment:
       MONGODB_URI : ${MONGODB_URI}
+      JWT_SECRET: ${JWT_SECRET}
     ports: 
       - "3000:3000"
     networks:
@@ -101,9 +102,9 @@ services:
       start_period: 60s
 
 
-  project_user_post-service:
+  project-user-post-service:
     build: ./services/project-user-post-service
-    container_name: project_user_post-service
+    container_name: project-user-post-service
     environment:
       DB_PORT: ${DB_PORT}
       DB_TYPE: ${DB_TYPE}
